# Turtle-Racing-Game

./: .gitignore  CHANGELOG.md  README.md  TODO.md  data.csv  game.py  machine.py  main.py  player.py  pyproject.toml  racer.py  registerWindow.py  requirements.txt
errors/: __init__.py  login_erro.py
frontend/: __init__.py  games_screen.py  machine.py  register_screen.py  user.py  user_interface.py
games/: __init__.py  game.py  interface.py  turtle_kart.py  turtle_space_invaders.py
games/kart/: __init__.py  constants.py  game.py  ui.py  utils.py
games/space_invaders/: __init__.py  constants.py  game.py  ui.py
games/space_invaders/entities/: __init__.py  alien.py  canon.py  laser.py
player/: __init__.py  player_dto.py
results/: result.csv  result.py
test/: test_user.py
user/: __init__.py  user.py  user_info.py  user_interface.py
utils/: generate_data.py
